# ytb2audiobot

./: .env  .gitignore  Dockerfile  README.md  answer.py  async.py  async.sh  autodownload_chat_ids_hashed.txt  buildpypackage  callback.py  data  data-ytb2audiobot  dev-run-bot.sh  dev-run.sh  docker-build-dev.sh  docker-build.sh  docker-compose-template.yaml  docker-compose.yaml  docker-run.sh  docker-runner-bot.sh  env9-last  finestate.py  heuy-server-run.sh  heuy_taskmanager.py  install-docker-compose.sh  install-manual.sh  localbuildpypackage  localinstall.sh  pypibuild.sh  pyproject.toml  run.sh  runlocal  subtitles.py  test-items.md  test_get_command_params_of_request.py  test_get_command_params_of_request00.py  tests.md  timer.txt  yt_info_unavalible.json
.github/workflows/: python-publish.yml
dev/: answer.py  async2.py  callback.py  dramatiq-server-run.sh  echobot.py  heuy_taskmanager.py  run.sh  test_get_command_params_of_request00.py
docker/: Dockerfile  docker-build.sh
helputils/: localinstall.sh
package/: checkenv.py  pypibuild.sh  pyproject.toml  run.sh
package/src/ytb2audiobot/: ytb2audiobot.py
package/src/ytb2audiobot/model/: duration_predictor_model.pkl
slice-test/: Почему твои отношения зависят только от женщины？ [5_4XgyebH28].m4a
src/ytb2audiobot/: commands.py  download.py  hardworkbot.py  slice.py  subtitles.py  timecodes.py  timecodes2.py  utils.py  ytb2audiobot.py  ytb2audiobot_asynced.py
src/ytb2audiobot/js_scripts/: summarize_movie.js
src/ytb2audiobot/model/: scaler.pkl  time_predictor_model.pkl
try-thumbnail/: make.py
