[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytb2audiobot"
dynamic = ["version"]
description = "🦜 Youtube to Audio by Andrew A Levin"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["ytb2audio"]

authors = [
  { name = "Andrew Levin", email = "author@example.com" }
]

maintainers = [
  { name = "A. Great Maintainer", email = "maintainer@example.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "ytb2audio",
  "audio2splitted",
  "aiogram",
  "pytube",
  "youtube-transcript-api",
  "pyyaml",
  "aiofiles",
  "urlextract",
  "ytbtimecodes>=1.3",
  "yt-dlp",
  "ytb2subtitles"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
Homepage = "https://github.com/andrewalevin"
Bug_Reports = "https://github.com/andrewalevin"
Funding = "https://donate.pypi.org"
Say_Thanks = "https://github.com/andrewalevin"
Source = "https://github.com/andrewalevin"

[project.scripts]
ytb2audiobot = "ytb2audiobot.ytb2audiobot:main"

[tool.hatch.version]
source = "env"
variable = "VERSION"
default = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/ytb2audiobot"]

[tool.hatch.build.targets.sdist]
include = ["src/ytb2audiobot", "README.md", "LICENSE.txt"]
